--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -15,7 +15,7 @@ Anyway, here is the video he shared. Some of my thoughts are below.
 
 John starts with a friendly introduction and quickly jumps into a story about Tweenbots. The idea is that there is a cardboard robot with boring capabilities (can only walk in a forward straight-line) that seeks to get to location x. It asks people nearby for help and manages to find it's way to x with the help of 40 people. John points out that this is a neat metaphor for Internet routing but also points out that the real meat of the experiment is the ability to bank on trusting the world to help get a task completed.
 
-After a semi-amusing story about reaching out to the Internet to put help together a book cover for one of his new books he tells a story about <a href="http://liveops.com/">LiveOps</a>, a site that creates operators (as in call center operators) out of anyone on the Internet. LiveOps helped replace the overwhelmed phone operators during Katrina and managed to successfully put together the operator network in around 7 hours. Not exactly the fastest turn-around time, but certainly impresive given the resources Katrina's disaster likely required.
+After a story about reaching out to the Internet to put help together a book cover for one of his new books he tells a story about <a href="http://liveops.com/">LiveOps</a>, a site that creates operators (as in call center operators) out of anyone on the Internet. LiveOps helped replace the overwhelmed phone operators during Katrina and managed to successfully put together the operator network in around 7 hours. Not exactly the fastest turn-around time, but certainly impresive given the resources Katrina's disaster likely required.
 
 The economics of MTurk are fascinating. <a href="http://cs.jhu.edu/~ccb/publications/mechanical-turk-for-machine-translation-evaluation.pdf">Chris's paper</a> discusses the considerably high quality and incredibly cheap work that can be done via MTurk. John discusses some attempts at getting work for free by creating games around the hits (mturk tasks, for the uninitiated). One such game involved making the components of electronics components more compact. The makers of the game don't know the answer to the games, but as people play the game they are contributing to new designs and design automation is taking place.
 
