--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -25,7 +25,7 @@ Since we're on the topic of economics, it's worth mentioning that MTurk has been
 
 It seems like the worst example of using Mechanical Turk purely for it's do-this-for-me abilities is a hit that wants someone to review something positively and then never mention that they did this on behalf of another group. The name hit seems perfect, because it's like a do-this hitman. A mercennary of sorts for minimally time consuming tasks. This is compelling enough to warrant some action to filter these things the way we filter spam.
 
-John's objections to ignorance are interesting to me. They come across, in ways, as being a bit more paranoid than I am. I'm not too concerned by the tasking because I believe a spam handling approach can generally solve the issues. At the very least, you can reduce the markets in such a way that it's very difficult to get these kinds of tasks out. Filter the list of tags. Some will slide through, so then add a flagging system so users can police the system too.
+John's objections to ignorance are interesting to me. They come across, in ways, as being a bit more paranoid than I am. I'm not too concerned by the tasking because I believe a spam handling approach can generally solve the issues. At the very least, you can reduce the markets in such a way that it's very difficult to get these kinds of tasks out. Filter the list of tags. Some will slide through, so a flagging system would also have to exist enabling users to police the system too.
 
 Openmind was brought up. Openmind is a system from MIT for interacting with Mechanical Turk for farming out tasks that are useful for researching patterns. My new friends at University of Maryland introduced this to us. Openmind has solved a problem I have been working for, but they did it in a centralized control kind of way. The tasks management is built inside Django such that a task goes to Mechanical Turk and builds the hit answer management system out of their website instead of Amazon's. This reduces Amazon to essentially a payment system instead of a data warehousing system. When using Python boto, you are putting all of the data inside Amazon's database and simply questing that database. If you insert some hit data, the database uses <i>some</i> of that data for the display methodologies and sends the hit to http://ourexperiment.com. The data comes directly into ourexperiment.com and you send whether or not you like the answer, the reward, any bonus information, etc, to Amazon for handling the distribution. 
 
