--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -25,13 +25,15 @@ Since we're on the topic of economics, it's worth mentioning that MTurk has been
 
 It seems like the worst example of using Mechanical Turk purely for it's do-this-for-me abilities is a hit that wants someone to review something positively and then never mention that they did this on behalf of another group. The name hit seems perfect, because it's like a do-this hitman. A mercennary of sorts for minimally time consuming tasks. This is compelling enough to warrant some action to filter these things the way we filter spam.
 
-John's objections to ignorance are interesting to me. They come across, in ways, as being a bit more paranoid than I am. I'm not too concerned by the tasking because I believe a spam handling approach can generally solve the issues. At the very least, you can reduce the markets in such a way that it's very difficult to get these kinds of tasks out. Filter the list of tags. Some will slide through, so a flagging system would also have to exist enabling users to police the system too.
+John's objections to ignorance are interesting to me. They come across, in ways, as being a bit more paranoid than I am. I'm not too concerned by the tasking because I believe a spam handling approach can generally solve the issues. At the very least, you can reduce the markets in such a way that it's very difficult to get these kinds of tasks out. Filter the list of tags. Some will slide through, so a flagging system would also have to exist enabling users to police the system too. 
 
 Openmind was brought up. Openmind is a system from MIT for interacting with Mechanical Turk for farming out tasks that are useful for researching patterns. My new friends at University of Maryland introduced this to us. Openmind has solved a problem I have been working for, but they did it in a centralized control kind of way. The tasks management is built inside Django such that a task goes to Mechanical Turk and builds the hit answer management system out of their website instead of Amazon's. This reduces Amazon to essentially a payment system instead of a data warehousing system. When using Python boto, you are putting all of the data inside Amazon's database and simply questing that database. If you insert some hit data, the database uses <i>some</i> of that data for the display methodologies and sends the hit to http://ourexperiment.com. The data comes directly into ourexperiment.com and you send whether or not you like the answer, the reward, any bonus information, etc, to Amazon for handling the distribution. 
 
-I am not totally sold on whether this is the right way to do it, but at least in part, thinking management through Amazon is worth building into the Python world via boto, but I'd like to build some kind of interface to managing both techniques. 
+I am not totally sold on whether this is the right way to do it, but at least in part, thinking management through Amazon is worth building into the Python world via boto, but I'd like to build some kind of interface to managing both techniques. Whether or not to store all of your data should be a choice. Creating a marketplace should be the priority and offering data storage should make that easier. Therefore, just choose whether you want the data visible to Amazon. Perhaps a library could be born. 
 
-I personally think the research benefits of this tool are potentially wonderful. So much progress has been made in analyzing statistics and then using that data to tell computers how to handle tasks. I agree with Andrew Ng's statement that machine learning is one of those most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency using such extensive use of mathematics that all of the important considerations for arriving at an answer can be expressed in terms of correctness.
+I'm working on boto as needs for certain pieces come up. Next up is a workflow management system. It's going to be a django app with no url's behind it. Any logic that is mechanical turk related will be in a library. I am very interested in building out boto and <a href="http://twitter.com/garnaat/">Mitch Garnaat</a> (maintainer of boto) has made me a maintainer. I want to build boto into a library that handles all mturk interaction that a user might care about and introduce the <a href="http://groups.google.com/group/boto-dev">dev</a> and <a href="http://groups.google.com/group/boto-users">users</a> mailing lists so everyone can help. The boto development is mature but the mechanical turk stuff is fairly new. Meaning, I'd love help.
+
+I believe the research benefits of this tool are numerous and exciting. So much progress has been made in analyzing statistics and then using that data to tell computers how to handle tasks. I agree with Andrew Ng's statement that machine learning is one of the most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency using such extensive use of mathematics that all of the important considerations for arriving at an answer can be expressed in terms of correctness.
 
 And so my view of this goes against what John spends so much time considering, because I believe in the openness of information. We can simultaneously have this research system and public contribution to knowledge and promise to keep the research open. MIT and Stanford are my favorite examples of this in their distribution of lectures, assignments, answers and so on for people to teach themselves the information these groups (MIT and Stanford) are generating. This is new knowledge, in many cases, so let's agree on what we consider harmful. I think a good place to start is simply with detecting people looking to spread misinformation and keep the explanations public for everyone to discuss.
 
