--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -31,7 +31,7 @@ Openmind was brought up. Openmind is a system from MIT for interacting with Mech
 
 I am not totally sold on whether this is the right way to do it, but at least in part, thinking management through Amazon is worth building into the Python world via boto, but I'd like to build some kind of interface to managing both techniques. Whether or not to store all of your data should be a choice. Creating a marketplace should be the priority and offering data storage should make that easier. Therefore, just choose whether you want the data visible to Amazon. Perhaps a library could be born. 
 
-I'm working on boto as need arises for certain functionality. Next up is a workflow management system. It's going to be a django app with no url's behind it. Any logic that is mechanical turk related will be in a library. I am very interested in building out boto and <a href="http://twitter.com/garnaat/">Mitch Garnaat</a> (maintainer of boto) has made me a maintainer. I want to build boto into a library that handles all mturk interaction that a user might care about and introduce the <a href="http://groups.google.com/group/boto-dev">dev</a> and <a href="http://groups.google.com/group/boto-users">users</a> mailing lists so everyone can help. The boto development is mature but the mechanical turk stuff is fairly new. Meaning, I'd love help.
+I'm working on boto as need arises for certain functionality. Next up is a workflow management system. It's going to be a django app with no url's behind it. Any logic that is mechanical turk related will be in a library. I am very interested in building out boto and <a href="http://twitter.com/garnaat/">Mitch Garnaat</a> (maintainer of boto) has made me a committer. I want to build boto into a library that handles all mturk interaction that a user might care about and introduce the <a href="http://groups.google.com/group/boto-dev">dev</a> and <a href="http://groups.google.com/group/boto-users">users</a> mailing lists so everyone can help. The boto development is mature but the mechanical turk stuff is fairly new. Meaning, I'd love help.
 
 I believe the research benefits of this tool are numerous and exciting. So much progress has been made in analyzing statistics and then using that data to tell computers how to handle tasks. I agree with Andrew Ng's statement that machine learning is one of the most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency using such extensive use of mathematics that all of the important considerations for arriving at an answer can be expressed in terms of correctness.
 
