--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -35,7 +35,7 @@ I'm working on boto as need arises for certain functionality. Next up is a workf
 
 I believe the research benefits of this tool are numerous and exciting. So much progress has been made in analyzing statistics and then using that data to tell computers how to handle tasks. I agree with Andrew Ng's statement that machine learning is one of the most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency using such extensive use of mathematics that all of the important considerations for arriving at an answer can be expressed in very small units of correctness.
 
-And so my view of this goes against what John spends so much time considering, because I believe in the openness of information. We can simultaneously have this research system and public contribution to knowledge and promise to keep the research open. MIT and Stanford are my favorite examples of this in their distribution of lectures, assignments, answers and so on for people to teach themselves the information these groups (MIT and Stanford) are generating. This is new knowledge, in many cases, so let's agree on what we consider harmful. I think a good place to start is simply with detecting people looking to spread misinformation and keep the explanations public for everyone to discuss.
+And so my view of this goes against what John spends so much time considering, because I believe in the openness of information and also the ability of society to act responsible as new information is created. This is the essence of law, isn't it? We can simultaneously have this research system and public contribution to knowledge and promise to keep the research open. MIT and Stanford are my favorite examples of this in their distribution of lectures, assignments, answers and so on for people to teach themselves the information these groups (MIT and Stanford) are generating. This is new knowledge, in many cases, so let's agree on what we consider harmful. I think a good place to start is simply with detecting people looking to spread misinformation and keep the explanations public for everyone to discuss.
 
 On top of that, there is a question regarding the digitization of mechanisms that already exist. It seems too similar to an argument for accepting whatever defficiencies currently exist. I don't see the point of not at least asking the questions that could provide answers. "Please upload a picture of a red balloon." OK, here is one. Someone can audit this answer. In fact, that's a typical response to solving the <i>crimes of misinformation</i>. Sounds ominous though, doesn't it? Like something out of a sci-fi novel. But that's where we're at in terms of progress. The thing that people fear is that the system might not work, but we can look to other nations and see systems with high feedback providing a lot of positives. We <i>can</i> be great, if want to be. It doesn't have to 1984.
 
