--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -23,7 +23,7 @@ When I was first playing with MTurk, I posted some hits asking users "What do yo
 
 Since we're on the topic of economics, it's worth mentioning that MTurk has been referred to, somewhat cynically, as an electronic sweatshop where people do work for pennys. John tackles this topic by bringing up the concerns that brought about modern labor laws and then contrasts them with what's offered by MTurk. For example, if we turn one of those MTurk games into something embedded in a friendly screen with Sesame Street type modeling for the UI, you could create a child labor market. Also along the lines of ethically dubious behavior: I have found <a href="http://j2labs.net/blog/2009/nov/15/outsourcing-reviews-mechanical-turk/">people gaming review based sites by paying turkers to post positive reviews</a>! John found this too. I didn't realize knowledge of the review gaming was so widespread, but I'm glad to see it. It'd be nice if Amazon would do something to prevent this!
 
-It seems like the worst example of using Mechanical Turk purely for it's do-this-for-me abilities is a hit that wants someone to review something positively and then never mention that they did this on behalf of another group. The name hit seems perfect, because it's like a do-this hitman. A mercennary of sorts for minimally time consuming tasks. This is compelling enough to warrant some action to filter these things the way we filter spam.
+It seems like the worst example of using Mechanical Turk purely for it's do-this-for-me abilities is a hit that wants someone to review something positively and then never mention that they did this on behalf of another group. The name hit seems perfect, because it's like a do-this-for-me hitman. A mercennary of sorts for minimally time consuming tasks. This is compelling enough to warrant some action to filter these things the way we filter spam.
 
 John's objections to ignorance are interesting to me. They come across, in ways, as being a bit more paranoid than I am. I'm not too concerned by the tasking because I believe a spam handling approach can generally solve the issues. At the very least, you can reduce the markets in such a way that it's very difficult to get these kinds of tasks out. Filter the list of tags. Some will slide through, so a flagging system would also have to exist enabling users to police the system too. 
 
