--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -29,7 +29,7 @@ John's objections to ignorance are interesting to me. They come across, in ways,
 
 <a href="http://www.openmind.org">Openmind</a> was brought up. I hadn't seen Open Mind until just now and am amazed to see it is a Django site much like the Wikitrans system I'm building. It also uses <a href="http://djangoproject.com">Django</a> and <a href="http://pinaxproject.com">Pinax</a> for the foundation. Good choice!
 
-Openmind is a system from MIT for interacting with Mechanical Turk for farming out tasks that are useful for researching patterns. My new friends at University of Maryland introduced this to us. Openmind has solved a problem I have been working for, but they did it in a centralized control kind of way. The tasks management is built inside Django such that a task goes to Mechanical Turk and builds the hit answer management system out of their website instead of Amazon's. This reduces Amazon to essentially a payment system instead of a data warehousing system. When using Python boto, you are putting all of the data inside Amazon's database and simply questing that database. If you insert some hit data, the database uses <i>some</i> of that data for the display methodologies and sends the hit to http://ourexperiment.com. The data comes directly into ourexperiment.com and you send whether or not you like the answer, the reward, any bonus information, etc, to Amazon for handling the distribution. 
+Open Mind is a system from MIT for interacting with Mechanical Turk for farming out tasks that are useful for researching patterns. My new friends at University of Maryland introduced this to us. Openmind has solved a problem I have been working for, but they did it in a centralized control kind of way. The tasks management is built inside Django such that a task goes to Mechanical Turk and builds the hit answer management system out of their website instead of Amazon's. This reduces Amazon to essentially a payment system instead of a data warehousing system. When using Python boto, you are putting all of the data inside Amazon's database and simply questing that database. If you insert some hit data, the database uses <i>some</i> of that data for the display methodologies and sends the hit to http://ourexperiment.com. The data comes directly into ourexperiment.com and you send whether or not you like the answer, the reward, any bonus information, etc, to Amazon for handling the distribution. 
 
 I am not totally sold on whether this is the right way to do it, but at least in part, thinking management through Amazon is worth building into the Python world via boto, but I'd like to build some kind of interface to managing both techniques. Whether or not to store all of your data should be a choice. Creating a marketplace should be the priority and offering data storage should make that easier. Therefore, just choose whether you want the data visible to Amazon. Perhaps a library could be born. 
 
