--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -37,7 +37,7 @@ I am not totally sold on whether this is the right way to do it, but at least in
 
 I'm working on boto as need arises for certain functionality. Next up is a workflow management system. It's going to be a django app with no url's behind it. Any logic that is mechanical turk related will be in a library. I am very interested in building out boto and <a href="http://twitter.com/garnaat/">Mitch Garnaat</a> (maintainer of boto) has made me a committer. I want to build boto into a full representation of Amazon's mturk API and and introduce the <a href="http://groups.google.com/group/boto-dev">dev</a> and <a href="http://groups.google.com/group/boto-users">users</a> mailing lists so everyone can help. The boto development is mature but the mechanical turk stuff is fairly new. Meaning, I'd love help.
 
-I believe the research benefits of this tool are numerous and exciting. So much progress has been made in analyzing statistics and then using that data to tell computers how to handle tasks. I agree with Andrew Ng's statement that machine learning is one of the most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency using such extensive use of mathematics that all of the important considerations for arriving at an answer can be expressed in very small units of correctness.
+I believe the research benefits of this tool are numerous and exciting. So much progress has been made in analyzing statistics and then using that data to train computer intelligence. I agree with Andrew Ng's statement that machine learning is one of the most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency using such extensive use of mathematics that all of the important considerations for arriving at an answer can be expressed in very small units of correctness.
 
 And so my view of this goes against what John spends so much time considering, because I believe in the openness of information and also the ability of society to act responsible as new information is created. This is the essence of law, isn't it? We can simultaneously have this research system and public contribution to knowledge and while also promising to catch the bad guys. MIT and Stanford are my favorite examples of good guys in their distribution of lectures, assignments, answers and so on for people to teach themselves the information these groups (MIT and Stanford) are generating. This is new knowledge, in many cases, so let's agree on what we consider harmful. I think a good place to start is simply with detecting people looking to spread misinformation and keep the explanations/definitions of misinformation public and available for everyone to discuss.
 
