--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -37,9 +37,9 @@ I am not totally sold on whether this is the right way to do it, but at least in
 
 I'm working on boto as need arises for certain functionality. Next up is a workflow management system. It's going to be a django app with no url's behind it. Any logic that is mechanical turk related will be in a library. I am very interested in building out boto and <a href="http://twitter.com/garnaat/">Mitch Garnaat</a> (maintainer of boto) has made me a committer. I want to build boto into a full representation of Amazon's mturk API and and introduce the <a href="http://groups.google.com/group/boto-dev">dev</a> and <a href="http://groups.google.com/group/boto-users">users</a> mailing lists so everyone can help. The boto development is mature but the mechanical turk stuff is fairly new. Meaning, I'd love help.
 
-I believe the research benefits of this tool are numerous and exciting. So much progress has been made in analyzing statistics and then using that data to train computer intelligence. I agree with Andrew Ng's statement that machine learning is one of the most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency using, with extensive use of mathematics and philosophy, that all of the important considerations for arriving at an answer can be expressed in very small units of correctness.
+I believe the research benefits of this tool are numerous and exciting. So much progress has been made in analyzing statistics and then using that data to train computer intelligence. I agree with Andrew Ng's statement that machine learning is one of the most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency, with extensive use of mathematics and philosophy, into very small questions about the world with a very small scope. Fans of <a href="http://en.wikipedia.org/wiki/Edmund_Burke">Edmund Burke</a> or <a href="http://en.wikipedia.org/wiki/Michael_Oakeshott">Michael Oakeshott</a> will be proud.
 
-And so my view of this goes against what John spends so much time considering, because I believe in the openness of information and also the ability of society to act responsible as new information is created. This is the essence of law, isn't it? We can simultaneously have this research system and public contribution to knowledge and while also promising to catch the bad guys. MIT and Stanford are my favorite examples of good guys in their distribution of lectures, assignments, answers and so on for people to teach themselves the information these groups (MIT and Stanford) are generating. This is new knowledge, in many cases, so let's agree on what we consider harmful. I think a good place to start is simply with detecting people looking to spread misinformation and keep the explanations/definitions of misinformation public and available for everyone to discuss.
+And so my view of mturk's unethical potential is different from John's because I believe in the openness of information and also the ability of society to act responsibly as new information is created. This is the essence of law, isn't it? We can simultaneously have this research system and public contribution to knowledge and while also promising to catch the bad guys. MIT and Stanford are my favorite examples of good guys in their distribution of lectures, assignments, answers and so on for people to teach themselves the information these groups (MIT and Stanford) are generating. This is new knowledge, in many cases, so let's agree on what we consider harmful. I think a good place to start is simply with detecting people looking to spread misinformation and keep the explanations/definitions of misinformation public and available for everyone to discuss.
 
 On top of that, there is a question regarding the digitization of mechanisms that already exist. It seems too similar to an argument for accepting whatever defficiencies currently exist. I don't see the point of not at least asking the questions that could provide answers. "Please upload a picture of a red balloon." OK, here is one. Someone can audit this answer. In fact, that's a typical response to solving the <i>crimes of misinformation</i>, like the hits that introduce false opinions to review sites. I'm willing to guess that almost everyone cringed a little bit when they first heard about that. But policing the communications sure sounds ominous, doesn't it? Like something out of a sci-fi novel. But that's where we're at as a society in terms of progress. What was once sci-fi is now current. We must figure out good answers to the hard social questions and keep trying to improve. We <i>can</i> be great, if want to be. It doesn't have to be 1984.
 
