--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -43,7 +43,7 @@ And so my view of mturk's unethical potential is different from John's because I
 
 On top of that, there is a question regarding the digitization of mechanisms that already exist. It seems too similar to an argument for accepting whatever defficiencies currently exist. I don't see the point of not at least asking the questions that could provide answers. "Please upload a picture of a red balloon." OK, here is one. Someone can audit this answer. In fact, that's a typical response to solving the <i>crimes of misinformation</i>, like the hits that introduce false opinions to review sites. I'm willing to guess that almost everyone cringed a little bit when they first heard about that. But policing the communications sure sounds ominous, doesn't it? Like something out of a sci-fi novel. But that's where we're at as a society in terms of progress. What was once sci-fi is now current. We must figure out good answers to the hard social questions and keep trying to improve. We <i>can</i> be great, if want to be. It doesn't have to be 1984.
 
-Towards the end, John drops a bombshell idea. He says he wouldn't mind having younger children spending time communicating about data on wikipedia but isn't sure how he'd feel about farming out tasks that children can use to earn money for the school. I agree that these are different! Kids working on knowledge processing systems. Let them share knowledge and make it easy to process and it's an education right there in itself along with a contribution to society's ability to learn. Letting a school turn it's children into workers, however, <b>is</b> the same as creating a child labor market. And the problem is that we want kids working on information that's positive to them, rather than some group's wallet so we must filter these tasks accordingly. Explaining this to our kids will educate them about social responsibility. Allowing them to correct us will engage them, and all of society, in the discussion.
+Towards the end, John drops a bombshell idea. He says he wouldn't mind having younger children spending time communicating about data on wikipedia, but he isn't sure how he'd feel about farming out tasks that children can use to earn money for their school. I agree that these are different! Kids working on knowledge processing systems are learning by improving data and inspecting it for inaccuracies. It's an education right there in itself along with also being a positive contribution to society's ability to learn. Letting a school turn it's children into workers, however, <b>is</b> the same as creating a child labor market. But the purpose of the school is the child's education, not their contribution to the schools funds so we must filter these tasks accordingly. Explaining this to our kids will educate them about social responsibility and allowing them to correct us will engage them, and all of society, in the discussion. Score!
 
 Where do <code>world.all_people()</code> want to go tomorrow? 
 --
