--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -33,7 +33,7 @@ Open Mind is a system from MIT for interacting with Mechanical Turk for farming 
 
 Open Mind has solved a problem I have been working for, but they did it in a centralized control kind of way. The tasks management is built inside Django such that a task goes to Mechanical Turk and builds the hit answer management system out of their website instead of Amazon's by embedding the content used for the hit inside a frame. This essentially reduces Amazon to just being a market place system instead of a markplace with a data warehousing system. When using Python boto, you are putting all of the data inside Amazon's database and simply querying that database over time or after receiving a notification. If you insert some hit data, the database uses <i>some</i> of that data for the display methodologies, like the url for the contents of a frame, and sends the hit to http://ourexperiment.com. The data comes directly into ourexperiment.com and you send whether or not you like the answer, the reward, any bonus information, etc, to Amazon for handling the distribution. 
 
-I am not totally sold on whether this is the right way to do it, but at least in part, thinking management through Amazon is worth building into the Python world via boto, but I'd like to build some kind of interface to managing both techniques. Whether or not to store all of your data should be a choice. Creating a marketplace should be the priority and offering data storage should make that easier. Therefore, just choose whether you want the data visible to Amazon. Perhaps a library could be born. 
+I am not totally sold on whether this is the right way to do it but I think management through Amazon has value. It's exactly what they offer through their API after all. Creating a marketplace should be the priority and offering data storage, via creating your data through API calls, should make that easier. Therefore, just choose whether you want the data visible to Amazon or you want to keep it all locally. Perhaps a library should be born. 
 
 I'm working on boto as need arises for certain functionality. Next up is a workflow management system. It's going to be a django app with no url's behind it. Any logic that is mechanical turk related will be in a library. I am very interested in building out boto and <a href="http://twitter.com/garnaat/">Mitch Garnaat</a> (maintainer of boto) has made me a committer. I want to build boto into a full representation of Amazon's mturk API and and introduce the <a href="http://groups.google.com/group/boto-dev">dev</a> and <a href="http://groups.google.com/group/boto-users">users</a> mailing lists so everyone can help. The boto development is mature but the mechanical turk stuff is fairly new. Meaning, I'd love help.
 
