--- a/_posts/2009-12-06-minds-for-sale.textile
+++ b/_posts/2009-12-06-minds-for-sale.textile
@@ -35,7 +35,7 @@ Open Mind has solved a problem I have been working for, but they did it in a cen
 
 I am not totally sold on whether this is the right way to do it but I think management through Amazon has value. It's exactly what they offer through their API after all. Creating a marketplace should be the priority and offering data storage, via creating your data through API calls, should make that easier. Therefore, just choose whether you want the data visible to Amazon or you want to keep it all locally. Perhaps a library should be born. 
 
-I'm working on boto as need arises for certain functionality. Next up is a workflow management system. It's going to be a django app with no url's behind it. Any logic that is mechanical turk related will be in a library. I am very interested in building out boto and <a href="http://twitter.com/garnaat/">Mitch Garnaat</a> (maintainer of boto) has made me a committer. I want to build boto into a full representation of Amazon's mturk API and and introduce the <a href="http://groups.google.com/group/boto-dev">dev</a> and <a href="http://groups.google.com/group/boto-users">users</a> mailing lists so everyone can help. The boto development is mature but the mechanical turk stuff is fairly new. Meaning, I'd love help.
+I'm working on boto as need arises for certain functionality. Next up is a workflow management system. It's going to be a django app with no url's behind it. Any logic that is mechanical turk related will be in a library. I am very interested in building out boto and <a href="http://twitter.com/garnaat/">Mitch Garnaat</a> (maintainer of boto) has made me a committer. I want to build boto into a full representation of Amazon's mturk API and introduce the <a href="http://groups.google.com/group/boto-dev">dev</a> and <a href="http://groups.google.com/group/boto-users">users</a> mailing lists so everyone can help. The boto development is mature but the mechanical turk stuff is fairly new. Meaning, I'd love help.
 
 I believe the research benefits of this tool are numerous and exciting. So much progress has been made in analyzing statistics and then using that data to train computer intelligence. I agree with Andrew Ng's statement that machine learning is one of the most exciting, if not the most exciting, fields that exist for study. It's the ultimate in science because we reduce the interpretation of correctness and efficiency, with extensive use of mathematics and philosophy, into very small questions about the world with a very small scope. Fans of <a href="http://en.wikipedia.org/wiki/Edmund_Burke">Edmund Burke</a> or <a href="http://en.wikipedia.org/wiki/Michael_Oakeshott">Michael Oakeshott</a> will be proud.
 
